; ModuleID = '/home/carl/AnghaBench/php-src/Zend/extr_zend_execute_API.c_zend_unclean_zval_ptr_dtor.c'
source_filename = "/home/carl/AnghaBench/php-src/Zend/extr_zend_execute_API.c_zend_unclean_zval_ptr_dtor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IS_INDIRECT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @zend_unclean_zval_ptr_dtor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @zend_unclean_zval_ptr_dtor(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i64 @Z_TYPE_P(i32* %3)
  %5 = load i64, i64* @IS_INDIRECT, align 8
  %6 = icmp eq i64 %4, %5
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i32*, i32** %2, align 8
  %9 = call i32* @Z_INDIRECT_P(i32* %8)
  store i32* %9, i32** %2, align 8
  br label %10

10:                                               ; preds = %7, %1
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @i_zval_ptr_dtor(i32* %11)
  ret void
}

declare dso_local i64 @Z_TYPE_P(i32*) #1

declare dso_local i32* @Z_INDIRECT_P(i32*) #1

declare dso_local i32 @i_zval_ptr_dtor(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
